--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./section1.css">
   </head>
 
 
   <body>
-    <div style="width: 1400px; display: flex; justify-content: space-between;">
+    <div class="section2__container">
       <img src="images/fashion-logo.png" />
       <p style="
           font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
@@ -111,7 +112,7 @@
 
 
 
-    <div style="display: flex; width: 1200px; margin: 30px 100px; justify-content: space-between;">
+    <div class="section3__container">
         <div style="flex-direction: column;">
             <div>
                 <img src="images/Y'sF1.png"
@@ -155,7 +156,7 @@
 
 
     
-    <div style="display: flex; width: 1200px; margin: 30px 100px; justify-content: space-between;">
+    <div class="section4__container">
         <div style="flex-direction: column; margin: 200px 100px;">
             <div>
                 <p style="font-size: 33px; font-family: 'Inter Tight', sans-serif;">DOWNLOAD APP &</p>
@@ -178,9 +179,7 @@
 
 
 
-
-    <div style="width: 1200px; height: 400px; flex-direction: column; background-color: E5C643;">
-        <div style="justify-content: center; align-items: center;">
+    <div class="section5__container">
             <div style="color: white; font-size: 33px; font-family: 'Inter Tight', sans-serif;">
                 <p>JOIN SHOPPING COMMUNITY TO</p>
                 <p>GET MONTHLY PROMO</p>
@@ -189,13 +188,15 @@
             <div>
                 Add your email here / SEND
             </div>
-        </div>
+        
     </div>
 
 
 
 
-   <div style="width: 1200px; height: 400px; display: flex; background-color: black;">
+
+
+   <div class="section6__container">
     <div>
         <div style="color: white;">
             <p>FASHION</p>
